<resources>
    <string name="app_name">LPTalk</string>
    <string name="sip">sip账号</string>
    <string name="passwords">密码</string>
    <string name="inputsip">请输入sip账号</string>
    <string name="inputpassword">请输入密码</string>
    <string name="login">登录</string>
    <string name="title_activity_login">login</string>
    <string name="sip_adress">sip地址</string>
    <string name="contacts">联系人</string>
    <string name="call_direct">拨打电话</string>
</resources>
